@@ -1,6 +1,7 @@
 v4.1.0
 + Allow for sending null/nil data packets
 + Drop support for JSONKit
++ Clean up internal represenation of messages
 
 v4.0.2
 + Fix NSInvalidArgumentException: "attempt to insert nil object" when using shorthand -callHandler:
